force-app/main/default/objects/ssot__OutcomeActivity__dlm/fields/ssot__GoalDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GoalDefinitionId__c</fullName>
    <label>Goal Definition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GoalDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>