force-app/main/default/objects/ssot__OutcomeActivity__dlm/fields/ssot__OutcomeActivityType__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutcomeActivityType__c</fullName>
    <label>Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutcomeActivityType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>