force-app/main/default/objects/ssot__OutcomeActivity__dlm/fields/ssot__rel_1716668773174_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668773174_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OutcomeActivity_ProgramId_map_Progra_rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>OutcomeActivity_ProgramId_map_Progra_rel</relationshipLabel>
    <relationshipName>rel_1716668773174_end</relationshipName>
    <type>Lookup</type>
</CustomField>