force-app/main/default/objects/ssot__OutcomeActivity__dlm/fields/ssot__rel_1716668777220_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668777220_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OutcomeActivity_GoalDefinitionId_map_rel</label>
    <referenceTo>ssot__GoalDefinition__dlm</referenceTo>
    <relationshipLabel>OutcomeActivity_GoalDefinitionId_map_rel</relationshipLabel>
    <relationshipName>rel_1716668777220_end</relationshipName>
    <type>Lookup</type>
</CustomField>