force-app/main/default/objects/ssot__OutcomeActivity__dlm/fields/ssot__rel_1716726575105_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726575105_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OutcomeActivity_BenefitId_map_Progra_rel</label>
    <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
    <relationshipLabel>OutcomeActivity_BenefitId_map_Progra_rel</relationshipLabel>
    <relationshipName>rel_1716726575105_end</relationshipName>
    <type>Lookup</type>
</CustomField>